# baken

./: Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md
.github/workflows/: dependency-review.yml  release.yml
docs/: rbsort-sort-comparison.md  true-peak-ceiling.md
src/: analyzer.rs  args.rs  cli.rs  main.rs  processor.rs  report.rs  scanner.rs  updater.rs  xmlutil.rs
src/cdjsafe/: location.rs  mod.rs  transcode.rs  xml.rs
src/rbsort/: camelot.rs  mod.rs  xml.rs
