[package]
name = "baken"
version = "3.0.1"
edition = "2021"
authors = ["Masanari Higashi"]
description = "Bake'n Deck — Rekordbox → CDJ prep toolkit: loudness gain, Key+BPM playlist sort, and CDJ-safe MP3 transcode baked into your files"
license = "MIT"
repository = "https://github.com/M-Igashi/baken"
homepage = "https://baken.ravers.workers.dev"
keywords = ["audio", "loudness", "dj", "rekordbox", "cdj"]
categories = ["command-line-utilities", "multimedia::audio"]
exclude = ["web/"]

[dependencies]
# CLI interaction
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"
glob = "0.3"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parallel processing
rayon = "1.12"

# File system
walkdir = "2.4"
chrono = "0.4"

# MP3/AAC lossless gain adjustment
mp3rgain = { version = "2.10", default-features = false, features = ["aac"] }

# XML parsing (rbsort subcommand)
quick-xml = "0.41"

# Update notification
update-informer = { version = "1.2", default-features = false, features = ["github", "ureq", "rustls-tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
